--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div class="categoria-seletor">
   <button class="categoria-btn active" data-categoria="Dia das Mães">Dia das Mães</button>
   <button class="categoria-btn" data-categoria="Dia dos Namorados">Dia dos Namorados</button>
+  <button class="categoria-btn" data-categoria="Dia dos Pais">Dia dos Pais</button>
 </div>
 <main class="catalog" id="catalog"></main>
 <footer>
