--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </div>
 </header>
 <div class="categoria-seletor">
-  <button class="categoria-btn active" data-categoria="Dia das Mães">Dia das Mães</button>
+  <button class="categoria-btn" data-categoria="Dia das Mães">Dia das Mães</button>
   <button class="categoria-btn" data-categoria="Dia dos Namorados">Dia dos Namorados</button>
-  <button class="categoria-btn" data-categoria="Dia dos Pais">Dia dos Pais</button>
+  <button class="categoria-btn azul active" data-categoria="Dia dos Pais">Dia dos Pais</button>
 </div>
 <main class="catalog" id="catalog"></main>
 <footer>
-  Fale conosco pelo WhatsApp: <a href="https://wa.me/55699999311324" target="_blank">(69) 99993-11324</a>
+  Fale conosco pelo WhatsApp: <a href="wa.me/5569992445784" target="_blank">(69) 99244-5784</a>
 </footer>
 <script src="catalogos.js"></script>
 <script src="catalogo.js"></script>
